--- a/w08.md
+++ b/w08.md
@@ -4,3 +4,23 @@ permalink : /W08/
 Top 10 List of Week 08
 ==============================
 
+1. __[CPU and I/O Burst Cycles](https://youtu.be/pVzb3TUcDLo)__<br>
+    Video ini menjelaskan mengenai CPU dan I/O burst dengan baik. Penjelasan dimulai dari definisi dari CPU dan I/O burst kemudian dilanjutkan dengan penjelasan mengenai cyclenya. Poin menarik dari vidoe ini adalah penjelasan dilakukan dengan bahasa yang mudah dimengerti serta menyertakan contoh sehingga membuat saya lebih mengerti.
+2. __[CPU Scheduling](https://www.studytonight.com/operating-system/cpu-scheduling)__<br>
+    Artikel ini berisi penjelasan mengenai CPU Scheduling dimulai dari definisi hingga beberapa algoritma untuk cpu scheduling secara singkat. Artikel juga menjelaskan tentang preemptive dan non-preemptive scheduling serta arti dari masing-masing scheduling criteria. Artikel juga menarik karena dilengkapi dengan ilustrasi sehingga lebih mudah dimengerti.
+3. __[FCFS Scheduling Algorithm](https://www.javatpoint.com/os-fcfs-scheduling)__<br>
+    Artikel ini menjelaskan mengenai FCFS Scheduling secara singkat namun jelas. Artikel menjelaskan mengenai definisi dari FCFS scheduling, keuntungan dan kekurangan dari FCFS. Artikel juga memuat contoh dan dijelaskan bagaimana menghitung turnaround time dan waiting time.
+4. __[More on FCFS Scheduling](https://youtu.be/7DoP1L9nAAs)__<br>
+    Video ini juga menjelaskan mengenai Algoritma FCFS. Video dijelaskan menggunakan perumpamaan sebuah antrian dan sebuah ilustrasi antrian. Kemudian, video juga menjelaskan mengapa average waiting time untuk FCFS Scheduling cenderung lama.
+5. __[SJF Algorithm](https://www.studytonight.com/operating-system/shortest-job-first)__<br>
+    SJF artinya proses dimulai dari burst time yang paling pendek terlebih dahulu. Artikel ini menjelaskan mengenai SJF dengan membaginya menjadi dua yaitu Preemptive dan Non Preemptive. Selain itu, artikel ini menarik karena terdapat contoh program beserta penjelasannya.
+6. __[Priority Scheduling](https://www.guru99.com/priority-scheduling-program.html)__<br>
+    Artikel tersebut menjelaskan mengenai apa itu priority scheduling. Artikel ini mencakup penjelasan mengenai definisi, tipenya, karakteristik, kelebihan dan kekurangan dari priority scheduling. Artikel ini juga memberikan contoh dan dijelaskan secara bertahap dan menggunakan ilustrasi sehingga lebih mudah dimengerti.
+7. __[Round Robin Algorithm](https://www.javatpoint.com/os-round-robin-scheduling-algorithm)__<br>
+    Algoritma Round Robin berfokus pada time sharing dan proses dilakukan secara cyclic. Artikel tersebut menjelaskan apa itu algoritma RR, kelebihan, serta kekurangan dari algoritma RR. Artikel tersebut menjelaskan tentang algoritma RR secara singkat dan terdapat diagram yang menggambarkan kerja algoritma RR.
+8. __[More on Round Robin Algorithm](https://youtu.be/YzBBJYfwdi8)__<br>
+    Penjelasan Round Robin secara lebih lengkap dan dengan sebuah ilustrasi merupakan hal yang membuat video ini menarik. Video ini mencakup pembahasan tentang apa itu algoritma RR serta bagaimana implementasi dari algoritma ini. Selain itu, video ini menjelaskan dengan bahasa yang mudah dimengerti.
+9. __[Difference between Hard and Soft Real Time System](https://www.geeksforgeeks.org/difference-between-hard-real-time-and-soft-real-time-system/)__<br>
+    Definisi dari real time system adalah sebuah sistem yang pekerjaannya memiliki sebuah deadline. Real time system dibagi menjadi dua, yaitu Hard dan Soft Real Time System. Artikel ini menjelaskan mengenai perbedaan dari keduanya secara jelas sehingga mudah dimengerti.
+10. __[Completely Fair Scheduling in Linux](https://youtu.be/scfDOof9pww)__<br>
+    Video ini menjelaskan tentang CFS di Sistem Operasi Linux. CFS sendiri bertujuan untuk membagi waktu dengan seimbang. CFS scheduler diimplementasikan berdasarkan red-black tree sebagai timeline untuk eksekusi task yang akan datang.
