--- a/w09.md
+++ b/w09.md
@@ -3,3 +3,21 @@ permalink : /W09/
 ---
 Top 10 List of Week 09
 ==============================
+1. __[Magnetic Disk Memory](https://www.geeksforgeeks.org/magnetic-disk-memory/)__<br>
+    Magnetic Disk sendiri adalah sebuah storage sekunder berupa sebuah cd yang di-coating dengan magnet untuk menyimpan suatu data. Artikel ini menarik karena menjelaskan secara singkat apa itu magnetic disk. Selain itu, artikel juga menampilkan keuntungan dan kerugian dari penggunaan magnetic disk.
+2. __[Magnetic Tape Memory](https://www.geeksforgeeks.org/magnetic-tape-memory/)__<br>
+    Magnetic Tape adalah contoh lain dari sebuah storage sekunder yang berbentuk pita plastik dimana salah satu sisinya digunakan untuk menyimpan suatu data. Artikel ini menarik karena menjelaskan apa yang dimaksud dengan magnetic tape. Artikel juga menjelaskan bagaimana keuntungan dan kerugian dari penggunaan magnetic tape.
+3. __[Difference between Magnetic Disk and Magnetic Tape](https://www.tutorialspoint.com/difference-between-magnetic-tape-and-magnetic-disk)__<br>
+    Artikel ini menarik karena menjelaskan secara rinci bagaimana perbedaan dari magnetic disk dan tape. Poin-poin perbedaan disampaikan melalui tabel sehingga terlihat perbedaan antara keduanya. Artikel ini sangat membantu saya dalam mengerti perbedaan diantara keduanya.
+4. __[Hard Disk Drive (HDD)](https://www.computerhope.com/jargon/h/harddriv.htm)__<br>
+    Artikel ini menjelaskan mengenai HDD secara rinci. Cakupan pembahasan artikel antara lain mengapa komputer menggunakan HDD, bagaimana penggunaan HDD, berapa besar penyimpanan HDD, dan lain sebagainya. Artikel ini juga menarik karena meliputi gambar-gambar dari HDD serta dijelaskan dengan bahasa yang mudah dipahami.
+5. __[Solid State Drive (SSD)](https://www.avast.com/c-what-is-ssd)__<br>
+    Artikel ini menjelaskan mengenai SSD. Cakupan pembahasan artikel meliputi definisi dari SSD, apa saja tipe-tipe dari SSD, bagaimana penggunaan SSD, dan lain sebagainya. Artikel juga menampilkan gambar-gambar SSD yang tersedia sehingga membantu saya untuk memahami apa itu SSD.
+6. __[Difference between HDD and SSD](https://sea.pcmag.com/storage/1526/ssd-vs-hdd-whats-the-difference)__<br>
+    Artikel ini menarik karena menjelaskan perbedaan antara keduanya dengan sangat baik serta menjelaskan hal-hal menarik lainnya yang berkaitan dengan HDD ataupun SSD. Artikel mencakup bagaimana sejarah dari SSD dan HDD dan masing-masing kelebihan dan kekurangannya. Kemudian, artikel juga menjelaskan apa yang harus dipilih antara HDD dan SSD sesuai dengan kebutuhan penggunaannya.
+7. __[BIOS in a computer](https://whatis.techtarget.com/definition/BIOS-basic-input-output-system)__<br>
+    Artikel ini menjelaskan apa itu BIOS pada sebuah komputer. BIOS sendiri adalah sebuah firmware yang digunakan untuk booting process. Artikel ini mencakup sejarah BIOS, bagaimana cara kerja BIOS, serta empat fungsi dari BIOS.
+8. __[What is UEFI and the difference between BIOS and UEFI](https://www.howtogeek.com/56958/htg-explains-how-uefi-will-replace-the-bios/)__<br>
+    Artikel ini menarik karena menjelaskan mengenai UEFI secara rinci. Kemudian, artikel juga menjelaskan perbedaan UEFI dengan BIOS serta bagaimana UEFI dapat menggantikan BIOS. Artikel juga menjelaskan cara mengakses UEFI pada komputer.
+9. __[]()__<br>
+10. __[]()__<br>
