--- a/w09.md
+++ b/w09.md
@@ -19,5 +19,7 @@ Top 10 List of Week 09
     Artikel ini menjelaskan apa itu BIOS pada sebuah komputer. BIOS sendiri adalah sebuah firmware yang digunakan untuk booting process. Artikel ini mencakup sejarah BIOS, bagaimana cara kerja BIOS, serta empat fungsi dari BIOS.
 8. __[What is UEFI and the difference between BIOS and UEFI](https://www.howtogeek.com/56958/htg-explains-how-uefi-will-replace-the-bios/)__<br>
     Artikel ini menarik karena menjelaskan mengenai UEFI secara rinci. Kemudian, artikel juga menjelaskan perbedaan UEFI dengan BIOS serta bagaimana UEFI dapat menggantikan BIOS. Artikel juga menjelaskan cara mengakses UEFI pada komputer.
-9. __[]()__<br>
-10. __[]()__<br>
+9. __[ACPI](https://kb.iu.edu/d/ahvl)__<br>
+    Artikel berikut menjelaskan mengenai apa itu ACPI. ACPI sendiri kepanjangannya adalah Advanced Configurations and Power Interface adalah sebuah power management yang dikembangkan oleh Intel, Microsoft, dan Toshiba. Walaupun artikel ini menjelaskan ACPI secara singkat, artikel ini membantu saya dalam mengetahui apa itu ACPI.
+10. __[Boot Loader](https://www.ionos.com/digitalguide/server/configuration/what-is-a-bootloader/)__<br>
+    Artikel ini menjelaskan tentang BootLoader. Bahasan yang dicakup pada artikel ini antara lain definisi dari bootloader, bagaimana bootloader bekerja, dimana bootloader disimpan, dan sebagainya. Artikel ini menarik karena menjelaskan bootloader dengan bahasa yang mudah dipahami.
